// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#react-component-snapshot \`snapshotOf\` The component is a class matches the snapshot 1`] = `
<div
  className="grand-parent"
>
  <div
    className="parent"
  >
    <div
      className="child"
    >
      TEXT
    </div>
  </div>
</div>
`;

exports[`#react-component-snapshot \`snapshotOf\` The component is a class matches the snapshot 2`] = `
<div
  className="grand-parent"
>
  TEXT (1)
  <div
    className="parent"
  >
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
  </div>
</div>
`;

exports[`#react-component-snapshot \`snapshotOf\` The component is a class matches the snapshot 3`] = `
<div
  className="grand-parent"
>
  TEXT (1)
  <div
    className="parent"
  >
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
  </div>
  TEXT (1)
</div>
`;

exports[`#react-component-snapshot \`snapshotOf\` The component is a class matches the snapshot 4`] = `
<div
  className="grand-parent"
>
  <div
    className="parent"
  >
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
  </div>
  TEXT (1)
</div>
`;

exports[`#react-component-snapshot \`snapshotOf\` The component is a function matches the snapshot 1`] = `
<div
  className="grand-parent"
>
  <div
    className="parent"
  >
    <div
      className="child"
    >
      TEXT
    </div>
  </div>
</div>
`;

exports[`#react-component-snapshot \`snapshotOf\` The component is a function matches the snapshot 2`] = `
<div
  className="grand-parent"
>
  TEXT (1)
  <div
    className="parent"
  >
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
  </div>
</div>
`;

exports[`#react-component-snapshot \`snapshotOf\` The component is a function matches the snapshot 3`] = `
<div
  className="grand-parent"
>
  TEXT (1)
  <div
    className="parent"
  >
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
  </div>
  TEXT (1)
</div>
`;

exports[`#react-component-snapshot \`snapshotOf\` The component is a function matches the snapshot 4`] = `
<div
  className="grand-parent"
>
  <div
    className="parent"
  >
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
  </div>
  TEXT (1)
</div>
`;

exports[`#react-component-snapshot \`toSnapshot\` The component is a class matches the snapshot 1`] = `
<div
  className="grand-parent"
>
  <div
    className="parent"
  >
    <div
      className="child"
    >
      TEXT
    </div>
  </div>
</div>
`;

exports[`#react-component-snapshot \`toSnapshot\` The component is a class matches the snapshot 2`] = `
<div
  className="grand-parent"
>
  TEXT (1)
  <div
    className="parent"
  >
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
  </div>
</div>
`;

exports[`#react-component-snapshot \`toSnapshot\` The component is a class matches the snapshot 3`] = `
<div
  className="grand-parent"
>
  TEXT (1)
  <div
    className="parent"
  >
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
  </div>
  TEXT (1)
</div>
`;

exports[`#react-component-snapshot \`toSnapshot\` The component is a class matches the snapshot 4`] = `
<div
  className="grand-parent"
>
  <div
    className="parent"
  >
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
  </div>
  TEXT (1)
</div>
`;

exports[`#react-component-snapshot \`toSnapshot\` The component is a function matches the snapshot 1`] = `
<div
  className="grand-parent"
>
  <div
    className="parent"
  >
    <div
      className="child"
    >
      TEXT
    </div>
  </div>
</div>
`;

exports[`#react-component-snapshot \`toSnapshot\` The component is a function matches the snapshot 2`] = `
<div
  className="grand-parent"
>
  TEXT (1)
  <div
    className="parent"
  >
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
  </div>
</div>
`;

exports[`#react-component-snapshot \`toSnapshot\` The component is a function matches the snapshot 3`] = `
<div
  className="grand-parent"
>
  TEXT (1)
  <div
    className="parent"
  >
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
  </div>
  TEXT (1)
</div>
`;

exports[`#react-component-snapshot \`toSnapshot\` The component is a function matches the snapshot 4`] = `
<div
  className="grand-parent"
>
  <div
    className="parent"
  >
    <div
      className="child"
    >
      TEXT (3)
    </div>
    TEXT (2)
  </div>
  TEXT (1)
</div>
`;

exports[`#react-component-snapshot \`toSnapshotFromComponentElement\` The component is a class gets the element 1`] = `<div />`;

exports[`#react-component-snapshot \`toSnapshotFromComponentElement\` The component is a function gets the element 1`] = `<div />`;

exports[`#react-component-snapshot \`toSnapshotFromContainerElement\` The component is a class gets the element 1`] = `<div />`;

exports[`#react-component-snapshot \`toSnapshotFromContainerElement\` The component is a function gets the element 1`] = `<div />`;
